<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_home">Home</string>
    <string name="main_news">News</string>
    <string name="main_my_info">Info</string>
    <string name="menu_search">Search</string>
    <string name="more">More</string>

</resources>